--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "!src/**/*"
   ],
   "dependencies": {
-    "purescript-prelude": "^4.0.0"
+    "purescript-prelude": "^4.0.0",
+    "purescript-newtype": "^3.0.0"
   },
   "devDependencies": {
     "purescript-assert": "^4.0.0"
