--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
   ],
   "dependencies": {
     "purescript-prelude": "^4.0.0",
-    "purescript-newtype": "^3.0.0"
+    "purescript-newtype": "^3.0.0",
+    "purescript-quickcheck-laws": "^4.0.0"
   },
   "devDependencies": {
     "purescript-assert": "^4.0.0"
